--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 col-xs-11 wow fadeIn" data-wow-delay="0.9s">
-						<p>This Service is Created B <a href="https://saranmahadev.github.io">Saran Mahadev</a></p>
+						<p>This Service is Created By <a href="https://saranmahadev.github.io">Saran Mahadev</a></p>
 					</div>
 				</div>
 			</div>
