--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 
 		<title>Giri Fireworks Trading</title>
-		<meta name="keywords" content="">
-		<meta name="description" content="">
-        <meta name="author" content="templatemo">
+		<meta name="keywords" content="Giri Fireworks Trading">
+		<meta name="description" content="#1 Best Fireworks Trading Online | BUY Now @girifireworkstrading.github.io">
+        <meta name="author" content="saranmahadev">
              
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
