--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 						<h2>GIRI FIREWORKS TRADING</h2>
 						<h3 class="rotate">WE ARE THE BEST &AMP; WE HAVE GREAT SERVICE,AVAILABLE ONLY IN CHENNAI AND SIVAKASI</h3>
 						<h3 class="rotate">Due To Covid-19 &AMP;Currently We Are Unavailable to Sell the Products</h3>
-						<!--https://forms.app/form/5f11afa8d8c3b92af46831b5-->
-						<a href="#" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">BUY Now</a>
+						<a href="https://forms.app/form/5f11afa8d8c3b92af46831b5" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">BUY Now</a>
 						
 					</div>
 					<div class="col-md-2"></div>
